--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "tui-editor": "1.3.3",
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
+    "vue-resource": "^1.5.3",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
+    "vue-upload-component": "^2.8.23",
     "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
     "xlsx": "0.14.1"
